tutorials/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -j ACCEPT -m state --state NEW -p tcp --source 10.254.0.0/255.255.0.0
-A INPUT -j ACCEPT -m state --state NEW -p udp --source 10.254.0.0/255.255.0.0
-A OUTPUT -j ACCEPT -m state --state ESTABLISHED,RELATED
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
